// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`file group strategy with multi-props object as query parameter > method file 1`] = `
{
    "__index": "export { PostApi } from "./post";
",
    "post": "import { z } from "zod";

export const req = z
  .object({ prop1: z.number().int(), prop2: z.number().int() })
  .strict();

export const endpoints = [
  {
    method: "post" as const,
    path: "/api/v1/test",
    operationId: "postApiV1Test",
    request: { queryParams: z.object({ req: req }).optional() },
    responses: { 200: { description: "OK", schema: z.void() } },
  },
] as const;

/**
 * MCP (Model Context Protocol) tool metadata derived from the OpenAPI document.
 *
 * Each entry provides:
 * - \`tool\`: JSON Schema Draft 07 compliant tool definition (name, description, annotations, schemas)
 * - \`httpOperation\`: source HTTP metadata (method, templated path, original path, operationId)
 * - \`security\`: upstream API security requirements (Layer 2 metadata only)
 *
 * Use \`tool\` when wiring into the MCP SDK, and \`httpOperation\`/\`security\` when presenting
 * additional context to operators or logging.
 */
export const mcpTools = [
  {
    tool: {
      name: "post_api_v_1_test",
      description: "POST /api/v1/test",
      inputSchema: {
        type: "object",
        properties: {
          query: {
            type: "object",
            properties: {
              req: {
                type: "object",
                properties: {
                  prop1: {
                    type: "integer",
                  },
                  prop2: {
                    type: "integer",
                  },
                },
                required: ["prop1", "prop2"],
              },
            },
            required: ["req"],
          },
        },
        required: ["query"],
      },
      annotations: {
        readOnlyHint: false,
        destructiveHint: false,
        idempotentHint: false,
      },
    },
    httpOperation: {
      method: "post" as const,
      path: "/api/v1/test",
      originalPath: "/api/v1/test",
    },
    security: {
      isPublic: true,
      usesGlobalSecurity: false,
      requirementSets: [],
    },
  },
] as const;
",
}
`;

exports[`file group strategy with multi-props object as query parameter > tag file 1`] = `
{
    "Default": "import { z } from "zod";

export const req = z
  .object({ prop1: z.number().int(), prop2: z.number().int() })
  .strict();

export const endpoints = [
  {
    method: "post" as const,
    path: "/api/v1/test",
    operationId: "postApiV1Test",
    request: { queryParams: z.object({ req: req }).optional() },
    responses: { 200: { description: "OK", schema: z.void() } },
  },
] as const;

/**
 * MCP (Model Context Protocol) tool metadata derived from the OpenAPI document.
 *
 * Each entry provides:
 * - \`tool\`: JSON Schema Draft 07 compliant tool definition (name, description, annotations, schemas)
 * - \`httpOperation\`: source HTTP metadata (method, templated path, original path, operationId)
 * - \`security\`: upstream API security requirements (Layer 2 metadata only)
 *
 * Use \`tool\` when wiring into the MCP SDK, and \`httpOperation\`/\`security\` when presenting
 * additional context to operators or logging.
 */
export const mcpTools = [
  {
    tool: {
      name: "post_api_v_1_test",
      description: "POST /api/v1/test",
      inputSchema: {
        type: "object",
        properties: {
          query: {
            type: "object",
            properties: {
              req: {
                type: "object",
                properties: {
                  prop1: {
                    type: "integer",
                  },
                  prop2: {
                    type: "integer",
                  },
                },
                required: ["prop1", "prop2"],
              },
            },
            required: ["req"],
          },
        },
        required: ["query"],
      },
      annotations: {
        readOnlyHint: false,
        destructiveHint: false,
        idempotentHint: false,
      },
    },
    httpOperation: {
      method: "post" as const,
      path: "/api/v1/test",
      originalPath: "/api/v1/test",
    },
    security: {
      isPublic: true,
      usesGlobalSecurity: false,
      requirementSets: [],
    },
  },
] as const;
",
    "__index": "export { DefaultApi } from "./Default";
",
}
`;
